manifests/cm-multitool-task.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  generation: 1
  labels:
    app: cm-multitool-task
  name: cm-multitool-task
  namespace: test 
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cm-multitool-task
  template:
    metadata: 
      labels:
        app: cm-multitool-task
    spec:      
      containers: 
      - image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent 
        name:  multitool
      - image: nginx
        imagePullPolicy: IfNotPresent 
        name:  nginx
        volumeMounts:
          - mountPath: /etc/nginx/nginx.conf # mount configmap cm-nginx  to /etc/nginx
            subPath: nginx.conf
            readOnly: true
            name: cm-nginx  
          - mountPath: /usr/share/nginx/html/underconstruction.html
            subPath: underconstruction.html
            readOnly: true
            name: cm-nginx-pages
          - mountPath: /var/log/nginx
            name: log
      volumes:
      - name: cm-nginx
        configMap:
          name: cm-nginx # place configmap `cm-nginx` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf 
      - name: cm-nginx-pages
        configMap:
          name: cm-nginx # place configmap `cm-nginx` on /usr/share/nginx/html/
          items:
            - key: underconstruction.html
              path: underconstruction.html 
      - name: log
        emptyDir: {}    
      
      dnsPolicy: ClusterFirst
      restartPolicy: Always  
      terminationGracePeriodSeconds: 30
