manifests/cm-multitool-service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels:
    app: cm-multitool-service
  name: cm-multitool-service
  namespace: test 
spec: 
  ports:
  - nodePort: 30422
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cm-multitool-task 
  type: NodePort
