manifests/cm-nginx-service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels:
    app: cm-nginx-service
  name: cm-nginx-service
  namespace: test 
spec: 
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cm-nginx-task
