manifests/cm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  generation: 1
  name: igateway
  namespace: test  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: mysite.com
    http:
      paths: 
      - backend:
          service:
            name: cm-nginx-service
            port: 
              number: 8080
        path: /
        pathType: Prefix   
  tls:
    - hosts: 
      - mysite.com
      secretName: cm-ingress-secret
